# Alva

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRACTAL-DOCS.md  README.md
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: middleware_basic.rs
crates/agent-core/src/: AGENTS.md  agent.rs  agent_loop.rs  event.rs  lib.rs  middleware.rs  tool_executor.rs  types.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/examples/: runtime_basic.rs
crates/agent-runtime/src/: builder.rs  graph.rs  init.rs  lib.rs
crates/alva-acp/: Cargo.toml
crates/alva-acp/src/: AGENTS.md  connection.rs  delegate.rs  error.rs  lib.rs  session.rs
crates/alva-agent-context/: AGENTS.md  Cargo.toml
crates/alva-agent-context/src/: AGENTS.md  apply.rs  auto_compact.rs  chain.rs  compact.rs  context_system.rs  default_plugin.rs  lib.rs  message_store.rs  middleware.rs  plugin.rs  rules_plugin.rs  sdk.rs  sdk_impl.rs  session.rs  store.rs  system_context.rs  types.rs  util.rs
crates/alva-agent-core/: AGENTS.md  Cargo.toml
crates/alva-agent-core/examples/: AGENTS.md  middleware_basic.rs
crates/alva-agent-core/src/: AGENTS.md  agent.rs  agent_builder.rs  agent_loop.rs  event.rs  extension.rs  lib.rs  middleware.rs  mock_fs.rs  pending_queue.rs  run.rs  run_child.rs  runtime_context.rs  shared.rs  state.rs  tool_executor.rs  types.rs
crates/alva-agent-core/tests/: agent_builder.rs  integration.rs  v2_integration.rs
crates/alva-agent-extension-builtin/: AGENTS.md  Cargo.toml
crates/alva-agent-extension-builtin/src/: agent_tool.rs  ask_human.rs  config_tool.rs  create_file.rs  enter_plan_mode.rs  enter_worktree.rs  execute_shell.rs  exit_plan_mode.rs  exit_worktree.rs  file_edit.rs  find_files.rs  grep_search.rs  internet_search.rs  lib.rs  list_files.rs  local_fs.rs  notebook_edit.rs  read_file.rs  read_url.rs  remote_trigger.rs  request_escalation.rs  schedule_cron.rs  send_message.rs  skill_tool.rs  sleep_tool.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  tool_search.rs  truncate.rs  understand_video.rs  view_image.rs  walkdir.rs  wasi_fs.rs
crates/alva-agent-extension-builtin/tests/: read_url_http.rs  services_e2e.rs  wiremock_smoke.rs
crates/alva-agent-graph/: AGENTS.md  Cargo.toml
crates/alva-agent-graph/src/: AGENTS.md  channel.rs  checkpoint.rs  compaction.rs  context_transform.rs  graph.rs  lib.rs  pregel.rs  retry.rs  session.rs  sub_agent.rs
crates/alva-agent-memory/: AGENTS.md  Cargo.toml
crates/alva-agent-memory/src/: AGENTS.md  backend.rs  error.rs  extract.rs  hash.rs  in_memory.rs  lib.rs  service.rs  sqlite.rs  sync.rs  types.rs
crates/alva-agent-runtime/: AGENTS.md  Cargo.toml
crates/alva-agent-runtime/examples/: AGENTS.md  runtime_basic.rs
crates/alva-agent-runtime/src/: AGENTS.md  builder.rs  extensions.rs  graph.rs  init.rs  lib.rs
crates/alva-agent-scope/: Cargo.toml
crates/alva-agent-scope/src/: board_registry.rs  lib.rs  scope_impl.rs
crates/alva-agent-security/: AGENTS.md  Cargo.toml
crates/alva-agent-security/src/: AGENTS.md  authorized_roots.rs  cache.rs  classifier.rs  guard.rs  lib.rs  mode_control.rs  modes.rs  path_utils.rs  pending_actions.rs  permission.rs  rules.rs  sandbox.rs  sensitive_paths.rs  url_info.rs
crates/alva-agent-tools/: AGENTS.md  Cargo.toml
crates/alva-agent-tools/src/: AGENTS.md  agent_tool.rs  ask_human.rs  config_tool.rs  create_file.rs  enter_plan_mode.rs  enter_worktree.rs  execute_shell.rs  exit_plan_mode.rs  exit_worktree.rs  extensions.rs  file_edit.rs  find_files.rs  grep_search.rs  internet_search.rs  lib.rs  list_files.rs  local_fs.rs  mock_fs.rs  notebook_edit.rs  read_file.rs  read_url.rs  remote_trigger.rs  schedule_cron.rs  send_message.rs  skill_tool.rs  sleep_tool.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  tool_search.rs  truncate.rs  view_image.rs
crates/alva-app/: AGENTS.md  Cargo.toml
crates/alva-app-cli/: AGENTS.md  Cargo.toml
crates/alva-app-cli/src/: AGENTS.md  agent_setup.rs  bundled_skills.rs  checkpoint.rs  context.rs  event_handler.rs  history.rs  job_log.rs  jobs_cmd.rs  main.rs  os_sandbox.rs  output.rs  plugins.rs  providers_cmd.rs  repl.rs  repl_completer.rs  session_store.rs  settings_cmd.rs  setup.rs  tools_cmd.rs  wasm_sandbox.rs
crates/alva-app-cli/tests/: AGENTS.md  jobs_golden.rs  os_sandbox_golden.rs  print_mode_golden.rs  providers_golden.rs  recursion_golden.rs  tools_golden.rs  wasm_sandbox_golden.rs
crates/alva-app-core/: AGENTS.md  Cargo.toml
crates/alva-app-core/examples/: lnp_warmup.rs  raw_tcp_test.rs
crates/alva-app-core/src/: AGENTS.md  analytics.rs  base_agent.rs  checkpoint.rs  components.rs  config.rs  error.rs  lib.rs  outcome.rs  paths.rs  resource.rs  roster.rs  session_projection.rs  session_registry.rs  utils.rs
crates/alva-app-core/tests/: AGENTS.md  acp_integration.rs  agent_capabilities.rs  base_agent_overrides.rs  e2e_agent_test.rs  e2e_http_test.rs  e2e_tool_coverage.rs  escalation_permission_modes.rs  eval_agent_tools.rs  scope_integration.rs  skill_system_test.rs  subagent_security_gate.rs
crates/alva-app-debug/: Cargo.toml
crates/alva-app-debug/src/: AGENTS.md  action_registry.rs  builder.rs  inspect.rs  lib.rs  log_layer.rs  log_store.rs  router.rs  server.rs  traced.rs
crates/alva-app-debug/tests/: AGENTS.md  integration.rs
crates/alva-app-devtools-mcp/: Cargo.toml
crates/alva-app-eval/: Cargo.toml
crates/alva-app-eval/src/: main.rs  (+4 more)
crates/alva-app-extension-browser/: Cargo.toml
crates/alva-app-extension-loader/: Cargo.toml
crates/alva-app-extension-memory/: Cargo.toml
crates/alva-app-gateway/: Cargo.toml
crates/alva-app-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
crates/alva-bus-lint/: Cargo.toml
crates/alva-core/: AGENTS.md  Cargo.toml
crates/alva-engine-adapter-alva/: Cargo.toml
crates/alva-engine-adapter-claude/: Cargo.toml
crates/alva-environment/: Cargo.toml
crates/alva-graph/: Cargo.toml
(+1580 files in other folders)
