[workspace]
members = [
    "crates/srow-app",
    "crates/srow-core",
    "crates/srow-debug",
    "crates/alva-types",
    "crates/alva-agent-core",
    "crates/alva-agent-graph",
    "crates/alva-agent-tools",
    "crates/alva-agent-security",
    "crates/alva-agent-memory",
    "crates/alva-agent-runtime",
    "crates/alva-protocol-skill",
    "crates/alva-protocol-mcp",
    "crates/alva-protocol-acp",
    "crates/alva-engine-runtime",
    "crates/alva-engine-adapter-claude",
    "crates/alva-test",
    "crates/srow-devtools-mcp",
]
resolver = "2"

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
