[workspace]
members = [
    "crates/alva-app",
    "crates/alva-app-core",
    "crates/alva-app-debug",
    "crates/alva-types",
    "crates/alva-agent-core",
    "crates/alva-agent-graph",
    "crates/alva-agent-tools",
    "crates/alva-agent-security",
    "crates/alva-agent-memory",
    "crates/alva-agent-scope",
    "crates/alva-agent-runtime",
    "crates/alva-protocol-skill",
    "crates/alva-protocol-mcp",
    "crates/alva-protocol-acp",
    "crates/alva-engine-runtime",
    "crates/alva-engine-adapter-claude",
    "crates/alva-engine-adapter-alva",
    "crates/alva-test",
    "crates/alva-app-devtools-mcp",
    "crates/alva-environment",
    "crates/alva-provider",
]
resolver = "2"

[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
