[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Batteries-included agent runtime — composes core, tools, security, and memory"

[dependencies]
agent-types = { path = "../agent-types" }
agent-core = { path = "../agent-core" }
agent-tools = { path = "../agent-tools" }
agent-security = { path = "../agent-security" }
agent-memory = { path = "../agent-memory" }
agent-graph = { path = "../agent-graph" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-core = "0.3"
tokio-stream = "0.1"

[features]
browser = ["agent-tools/browser"]
default = ["browser"]

[[example]]
name = "runtime_basic"
