[package]
name = "alva-acp"
version = "0.1.0"
edition = "2021"
description = "Standalone ACP (Agent Client Protocol) crate: protocol types, process management, session, and delegate"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "process", "io-util", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
