[package]
name = "alva-agent-context"
version = "0.1.0"
edition = "2021"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-kernel-core = { path = "../alva-kernel-core" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["sync", "time", "process", "fs"] }
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
