[package]
name = "alva-agent-core"
version = "0.1.0"
edition = "2021"
description = "Agent-layer core: Extension trait, HostAPI, event dispatch, MockToolFs"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-kernel-core = { path = "../alva-kernel-core" }
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
