[package]
name = "alva-agent-core"
version = "0.1.0"
edition = "2021"
description = "Agent-layer core: Plugin assembly, Registrar, AgentBuilder, MockToolFs"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-kernel-core = { path = "../alva-kernel-core" }
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
futures-core = "0.3"
tokio-stream = "0.1"
