[package]
name = "alva-agent-extension-builtin"
version = "0.1.0"
edition = "2021"
description = "Built-in agent extensions: tool implementations and Extension wrappers (file I/O, shell, web, notebook, worktree, team, task, utility)"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-agent-core = { path = "../alva-agent-core" }
alva-agent-memory = { path = "../alva-agent-memory" }
alva-agent-security = { path = "../alva-agent-security" }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
regex = "1"
glob = "0.3"
tracing = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }

# Native-only: process + fs + walkdir
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["process", "fs", "io-util", "rt"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"], optional = true }
alva-agent-context = { path = "../alva-agent-context" }

# Native and WASI file search use the synchronous, gitignore-aware walker.
[target.'cfg(any(not(target_family = "wasm"), all(target_family = "wasm", target_os = "wasi")))'.dependencies]
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
# Loop 16 added `#[tokio::test(flavor = "multi_thread", worker_threads = 4)]`
# concurrency tests on services. The regular tokio dep above only has `rt`
# (single-thread runtime); `rt-multi-thread` is enabled here only for tests.
tokio = { version = "1", features = ["rt-multi-thread"] }
# wiremock: HTTP mock server for testing `web` feature tools
# (internet_search + read_url). Approved by user decision 2026-05-17 (option 2A).
# Only compiled into the test profile; zero impact on production binary.
# Smoke wiring verified by tests/wiremock_smoke.rs.
wiremock = "0.6"

[features]
default = ["core", "utility"]

# Always-on fundamentals
core = []          # file_io + shell + interaction + plan_mode primitives
utility = []       # sleep / config / skill / tool_search

# Opt-in bundles
web = ["dep:reqwest"]    # internet_search + read_url (native only by target gating)
notebook = []            # notebook_edit
worktree = []            # enter/exit_worktree
team = []                # team_create/delete + send_message
task = []                # task_create/update/get/list/output/stop
schedule = []            # schedule_cron + remote_trigger
# (no `browser` feature: the BrowserPlugin wrapper lives in
#  alva-app-extension-browser — SDK crates carry no alva-app-* deps)
