[package]
name = "alva-agent-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
futures-core = "0.3"
