[package]
name = "alva-agent-memory"
version = "0.1.0"
edition = "2021"
description = "Agent memory — lean trait + types. Heavy impls (sqlite, workspace sync, extract) live in alva-app-extension-memory."

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
