[package]
name = "alva-agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Batteries-included agent runtime — composes core, tools, security, and memory"

[dependencies]
alva-types = { path = "../alva-types" }
alva-agent-core = { path = "../alva-agent-core" }
alva-agent-tools = { path = "../alva-agent-tools" }
alva-agent-security = { path = "../alva-agent-security" }
alva-agent-memory = { path = "../alva-agent-memory" }
alva-agent-graph = { path = "../alva-agent-graph" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-core = "0.3"
tokio-stream = "0.1"

[features]
browser = ["alva-agent-tools/browser"]
default = ["browser"]

[[example]]
name = "runtime_basic"
