[package]
name = "alva-agent-scope"
version = "0.1.0"
edition = "2021"
description = "Agent execution scope — blackboard communication, board isolation, session tree, depth control"

[dependencies]
alva-types = { path = "../alva-types" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
