[package]
name = "alva-agent-security"
version = "0.1.0"
edition = "2021"
description = "Security subsystem for the agent framework"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = { version = "5", optional = true }
regex = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync"] }

[features]
default = ["native"]
native = ["dirs"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
