[package]
name = "alva-agent-security"
version = "0.1.0"
edition = "2021"
description = "Security subsystem for the agent framework"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-kernel-core = { path = "../alva-kernel-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = { version = "5", optional = true }
regex = "1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros"] }
# Loop B (3C/T6 path): URL parsing for inspect_url. `url` is already in
# the workspace transitively via reqwest; making it direct here keeps
# the dependency explicit and version-pinned at this layer.
url = "2"

[features]
default = ["native"]
native = ["dirs"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["net"] }

[dev-dependencies]
futures-core = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tokio-stream = "0.1"
