[package]
name = "alva-agent-tools"
version = "0.1.0"
edition = "2021"
description = "Built-in tool implementations for the agent framework"

[dependencies]
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-agent-core = { path = "../alva-agent-core" }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
regex = "1"
glob = "0.3"
tracing = "0.1"
base64 = "0.22"

# reqwest pulls hyper → tokio/net → mio, which doesn't compile for wasm32.
# Native targets get the full reqwest behind the `native` feature; wasm32
# never sees it (and the internet_search/read_url modules are cfg-gated).
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["process", "fs", "io-util", "rt"] }
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# `native` is a no-op on wasm32 because reqwest is target-gated above.
# On native it enables internet_search + read_url.
native = ["dep:reqwest"]
default = ["native"]
