[package]
name = "alva-app-cli"
version = "0.1.0"
edition = "2021"
description = "Alva CLI — interactive terminal agent built on alva-app-core"

[[bin]]
name = "alva"
path = "src/main.rs"

[dependencies]
alva-app-core = { path = "../alva-app-core" }
alva-agent-core = { path = "../alva-agent-core" }
alva-agent-runtime = { path = "../alva-agent-runtime" }
alva-types = { path = "../alva-types" }
alva-provider = { path = "../alva-provider" }
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
