[package]
name = "alva-app-cli"
version = "0.1.0"
edition = "2021"
description = "Alva CLI — interactive terminal agent built on alva-app-core"

[[bin]]
name = "alva"
path = "src/main.rs"

[dependencies]
alva-app-core = { path = "../alva-app-core" }
alva-kernel-core = { path = "../alva-kernel-core" }
alva-host-native = { path = "../alva-host-native" }
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-llm-provider = { path = "../alva-llm-provider" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
crossterm = "0.28"
ratatui = "0.29"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
