[package]
name = "alva-app-core"
version = "0.1.0"
edition = "2021"
description = "Alva App core — application orchestration layer: agent lifecycle, skills, MCP, ACP, environment, persistence"

[lib]
name = "alva_app_core"
path = "src/lib.rs"

[[bin]]
name = "alva-cli"
path = "src/bin/cli/main.rs"

[dependencies]
# Extracted agent crates
alva-types = { path = "../alva-types" }
alva-agent-core = { path = "../alva-agent-core" }
alva-agent-tools = { path = "../alva-agent-tools" }
alva-agent-security = { path = "../alva-agent-security" }
alva-agent-memory = { path = "../alva-agent-memory" }
alva-agent-runtime = { path = "../alva-agent-runtime" }
alva-agent-graph = { path = "../alva-agent-graph" }
alva-agent-scope = { path = "../alva-agent-scope" }
alva-protocol-acp = { path = "../alva-protocol-acp" }
alva-protocol-skill = { path = "../alva-protocol-skill" }
alva-protocol-mcp = { path = "../alva-protocol-mcp" }
alva-provider = { path = "../alva-provider" }
alva-environment = { path = "../alva-environment" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ID / time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cross-platform app data directory
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tokio-stream = "0.1"
serde_yaml = "0.9"
alva-test = { path = "../alva-test" }
