[package]
name = "alva-app-debug"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpui = ["dep:gpui"]

[dependencies]
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"

[dependencies.gpui]
version = "0.2"
optional = true
