[package]
name = "alva-app-devtools-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server wrapping alva-app-debug HTTP API for AI-driven development"

[[bin]]
name = "alva-app-devtools-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
