[package]
name = "alva-app-eval"
version = "0.1.0"
edition = "2021"
description = "Lightweight agent eval playground — real-time SSE event stream UI for testing prompts, tools, and agent behavior"

[[bin]]
name = "alva-app-eval"
path = "src/main.rs"

[dependencies]
# Workspace crates
alva-kernel-abi = { path = "../alva-kernel-abi" }
alva-kernel-core = { path = "../alva-kernel-core" }
alva-agent-tools = { path = "../alva-agent-tools", default-features = false, features = ["native"] }
alva-host-native = { path = "../alva-host-native" }
alva-agent-security = { path = "../alva-agent-security" }
alva-app-core = { path = "../alva-app-core" }
alva-llm-provider = { path = "../alva-llm-provider" }
alva-protocol-skill = { path = "../alva-protocol-skill" }

# Skill discovery
dirs = "5"

# Web server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Static assets (compiled into binary)
rust-embed = "8"
mime_guess = "2"

# Async
async-trait = "0.1"

# Utilities
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
