[package]
name = "alva-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alva-types = { path = "../alva-types" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
futures-core = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio-stream = "0.1"

[dev-dependencies]
alva-test = { path = "../alva-test" }

[[example]]
name = "middleware_basic"
