[package]
name = "alva-engine-adapter-claude"
version = "0.1.0"
edition = "2021"

[dependencies]
alva-engine-runtime = { path = "../alva-engine-runtime" }
alva-types = { path = "../alva-types" }
async-trait = "0.1"
futures-core = "0.3"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
